--- a/main.html
+++ b/main.html
@@ -4,12 +4,73 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Game Statics</title>
+    <link rel="stylesheet" href="styles.css"> 
+	<style>
+		table {
+			border-collapse: collapse;
+			width: 80%;
+			margin: 20px auto;
+		} 
+		th, td{
+			padding: 12px;
+			text-align: center; 
+             border: 1px solid #ddd;
+			} 
+		th{
+            background-color: #333;
+            color: #fff;
+		}                    
+		    tr:nth-child(even) {
+            background-color: #f2f2f2;
+	</style>
 </head>
 <body>
     <!-- add table here -->
-
-        
+     <h1>Game Statistics</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Player</th>
+                <th>Score</th>
+                <th>Level</th>
+                <th>Time Played (minutes)</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Player 1</td>
+                <td>2500</td>
+                <td>5</td>
+                <td>45</td> 
+			     </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Player 1</td>
+                <td>2500</td>
+                <td>5</td>
+                <td>45</td>
+            </tr> 	
+			 <tr>
+                <td>Player 2</td>
+                <td>3100</td>
+                <td>6</td>
+                <td>55</td>
+            </tr> 
+			 <tr>
+                <td>Player 3</td>
+                <td>1800</td>
+                <td>3</td>
+                <td>30</td>
+            </tr>             
+			    <tr>
+                <td>Player 4</td>
+                <td>4200</td>
+                <td>7</td>
+                <td>60</td>
+            </tr> 
+           </tbody>
+    </table> 
 </body>
 </html>
